--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.14.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-image-gallery": "^0.8.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
