Photosphere introduced through photo-sphere-viewer

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "es6-promise": "^4.2.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "photo-sphere-viewer": "^3.3.2",
     "popper.js": "^1.14.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
