--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "es6-promise": "^4.2.4",
+    "bootstrap": "^4.2.1",
+    "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
-    "photo-sphere-viewer": "^3.3.2",
-    "popper.js": "^1.14.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-image-gallery": "^0.8.7",
-    "react-router-dom": "^4.2.2",
+    "photo-sphere-viewer": "^3.5.0",
+    "popper.js": "^1.14.6",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-image-gallery": "^0.8.12",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.1"
   },
   "scripts": {
@@ -20,5 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-plugin-react": "^7.12.3"
   }
 }
